--- a/biblio.bib
+++ b/biblio.bib
@@ -383,3 +383,13 @@
   publisher={Public Library of Science San Francisco, USA}
 }
 
+@misc{steward2012replication,
+  title={Replication and reproducibility in spinal cord injury research},
+  author={Steward, Oswald and Popovich, Phillip G and Dietrich, W Dalton and Kleitman, Naomi},
+  journal={Experimental neurology},
+  volume={233},
+  number={2},
+  pages={597--605},
+  year={2012},
+  publisher={Elsevier}
+}
